--- a/app/globals.css
+++ b/app/globals.css
@@ -15,6 +15,24 @@ body {
 }
 
 @layer utilities {
+  .loader {
+    width: fit-content;
+    font-weight: bold;
+    font-family: sans-serif;
+    font-size: 30px;
+    padding-bottom: 8px;
+    background: linear-gradient(currentColor 0 0) 0 100%/0% 3px no-repeat;
+    animation: l2 2s linear infinite;
+  }
+  .loader:before {
+    content: "Loading...";
+  }
+  @keyframes l2 {
+    to {
+      background-size: 100% 3px;
+    }
+  }
+
   .btn_white {
     @apply border-white bg-white px-8 py-3 text-green-50;
   }
@@ -135,6 +153,30 @@ body {
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+
+@layer base {
+  /* Customize the scrollbar for WebKit-based browsers (like Chrome) */
+  ::-webkit-scrollbar {
+    width: 12px;
+  }
+
+  /* Track or background of the scrollbar */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1; /* Light background for the track */
+  }
+
+  /* Handle or draggable part of the scrollbar */
+  ::-webkit-scrollbar-thumb {
+    background-color: #1e90ff; /* Blue color for the thumb */
+    border-radius: 6px; /* Round corners for the thumb */
+    border: 3px solid #f1f1f1; /* Space between thumb and track */
+  }
+
+  /* Hover effect for the scrollbar handle */
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #0073e6; /* Darker blue on hover */
+  }
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
