--- a/view/emails/emailBase.pug
+++ b/view/emails/emailBase.pug
@@ -297,7 +297,7 @@ html(lang="en")
   body
     table.body(role="presentation", border="0", cellpadding="0", cellspacing="0")
       tr
-        td &amp;nbsp;
+        td &amp;
         td.container
           .content
             // START CENTERED WHITE CONTAINER
