changed the localhost to host url

--- a/view/emails/emailBase.pug
+++ b/view/emails/emailBase.pug
@@ -3,7 +3,7 @@ html(lang="en")
   head
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="Content-Type", content="text/html; charset=UTF-8")
-    title Simple Transactional Email
+    title Scrumb&shine
     style(media="all", type="text/css").
       /* -------------------------------------
       GLOBAL RESETS
@@ -297,11 +297,10 @@ html(lang="en")
   body
     table.body(role="presentation", border="0", cellpadding="0", cellspacing="0")
       tr
-        td &amp;
         td.container
           .content
             // START CENTERED WHITE CONTAINER
-            span.preheader This is preheader text. Some clients will show this text as a preview.
+            span.preheader start Cleaning Now
             table.main(role="presentation", border="0", cellpadding="0", cellspacing="0")
               // START MAIN CONTENT AREA
               tr
@@ -323,4 +322,4 @@ html(lang="en")
                   p Ferhat Mohamed Tahar, CEO
               // END MAIN CONTENT AREA
             // END CENTERED WHITE CONTAINER
-        td &amp;nbsp;
+        td &amp;
